# FoundationGeo

./: LICENSE  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
baselines/: foundationgeo.py
configs/eval/: all_benchmarks.json
configs/train/: BaseModel.json  FoundationGeo.json
foundationgeo/model/: __init__.py  base.py  modules.py  utils.py  v1.py
foundationgeo/model/dinov3/models/: vision_transformer.py
foundationgeo/scripts/: app.py  cli.py  eval_baseline.py  infer.py  infer_baseline.py  infer_panorama.py  train.py  train_base.py  vis_data.py
foundationgeo/test/: metrics.py
foundationgeo/train/: dataloader.py  losses.py
foundationgeo/utils/: geometry_torch.py  io.py  vis.py
start_scripts/: BaseModel.sh  FoundationGeo.sh
start_scripts/Eval/: FoundationGeo_Base_Eval.sh  FoundationGeo_Eval.sh
